@@ -20,7 +20,6 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -231,7 +230,7 @@ public final class TestFixtures {
     return Arrays.stream(stagesCsv.split(";"))
                  .map(String::trim)
                  .map(Stage::valueOf)
-                 .collect(Collectors.toList());
+                 .toList();
   }
 
   /**
@@ -241,7 +240,7 @@ public final class TestFixtures {
     return Arrays.stream(csv.split(";"))
                  .map(String::trim)
                  .map(Integer::parseInt)
-                 .collect(Collectors.toList());
+                 .toList();
   }
 
   /**
